[Bug #163217302] Align content to center of the page

--- a/UI/static/css/main.css
+++ b/UI/static/css/main.css
@@ -419,24 +419,17 @@ a.current {
 /* meetups page */
 
 .row {
-    position: absolute;
-    top: 150px;
-    left: 160px;
-    width: 33.333%;
+    position: relative;
+    margin-top: 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .row2 {
-    position: absolute;
-    top: 450px;
-    margin-top: 30px;
-    left: 160px;
-    widows: 33.3333%;
+    position: relative;
+    margin-top: 50px;
     display: flex;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
     padding-bottom: 30px;
     overflow: scroll;
 }
@@ -445,6 +438,7 @@ a.current {
 .meetups-card {
     position: relative;
     display: inline-block;
+    align-content: center;
     margin: 25px;
     padding: 0;
     width: 300px;
